feat(localnet): support `v2/getWalletInformation` and `v2/getTokenData`
